@@ -94,6 +94,8 @@
 	
 @
 
+\section*{Appendix}
+
 % add table of contents in 'Index'
 %\cleardoublepage
 %\phantomsection
@@ -101,11 +103,27 @@
 
 <<indexCustom-printIndex>>=
 
-	if(!is.null(inputParameters$index$indexPrint))
+	if(!is.null(inputParameters$index$indexPrint)) {
+		cat("\\subsection{Index}\n")
 		cat(inputParameters$index$indexPrint)
+	}
 
 @
 
 \printindex
+
+\subsection{Session information}
+
+This report was \Sexpr{ifelse(shiny, "automatically generated by a Shiny application", "generated")}
+the: \Sexpr{format(Sys.time(), format = "%Y-%m-%d at %H:%M:%S")}.
+
+<<sessionInfo>>=
+
+	sessionInfoTex <- toLatex(sessionInfo())
+	# highlight versions of patientProfilesVis and patientProfilesVisShiny packages
+	sessionInfoTex <- gsub("(patientProfilesVis[Shiny]*~[^,]*)", "\\\\textbf{\\1}", sessionInfoTex)
+	print(sessionInfoTex)
+	
+@
 
 \end{document}
